# treetime

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  .pylintrc  .readthedocs.yml  .travis.yml  .travis_test.sh  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  __init__.py  ancestral_reconstruction.py  bacon.toml  bunfig.toml  changelog.md  clippy.toml  compare_coalescent.py  compare_coalescent_joint.py  contributing.md  docker-cross  docker-dev  docker-dev.dockerfile  homoplasy_scanner.py  mugration.py  package.json  preprocessing.py  pylint_source_reporter.py  pyproject.toml  pyrightconfig.json  release  requirements.txt  rust-toolchain.toml  rustfmt.toml  (+5 more)
.cargo/: config.toml
.github/workflows/: checks.yml  ci.yml  cli-build.yml  cli.yml  nightly.yml  release.yml  schedule-nightly.yml
benchmarking/: sequence_algorithms.py  timetree_algorithms.py
data/: H3N2_NA_allyears_NA.20.fasta  H3N2_NA_allyears_NA.20.metadata.csv  H3N2_NA_allyears_NA.200.fasta  H3N2_NA_allyears_NA.200.metadata.csv  H3N2_NA_allyears_NA.500.fasta  PR.B.100.fasta  PR.B.100.nwk  ebola.csv  ebola.metadata.csv  ebola.nwk  fgen_flu_dates.py  flu.HA.fasta  flu.HA.json  flu.HA.nwk  flu.HA.yrs  flu_trivial.fasta  flu_trivial.nwk  subsample  usher-download-examples
data/dengue/: dengue2_1000.tsv  dengue2_2000.fasta.xz  dengue2_2000.nwk  dengue2_500.nwk
data/ebola/: aln.fasta.xz  ebola.fasta.zst  metadata.tsv
data/h3n2_na_20/: h3n2_na_20.nwk
data/h3n2_na_200/: h3n2_na_200.metadata.csv
data/h3n2_na_500/: h3n2_na_500.fasta.zst  h3n2_na_500.metadata.csv
data/lassa/: lassaL_200.nwk  lassaL_50.tsv  lassaL_500.fasta.xz
data/mpox/: mpoxClade2_1000.fasta.xz  mpoxClade2_1000.nwk  mpoxClade2_2000.fasta.xz  mpoxClade2_2000.nwk  mpoxClade2_2000.tsv
data/phyloxml/: README.md  amphibian_tree_of_life_Frost_DR_2006.xml  apaf.xml  bcl_2.xml  hg1001.xml
data/rsv/: rsva_1000.nwk  rsva_2000.fasta.xz  rsva_2000.nwk  rsva_2000.tsv
data/sc2/: sc2.fasta.xz  sc2.fasta.zst
data/tb/: lee_2015.informative_sites.fasta.zst  lee_2015.nwk  lee_2015.vcf.zst  tb_ref.fasta.zst
data/usher/: global_phylo_opt.pb
data/zika/: country_weights.csv  zika.fasta.zst  zika.metadata.csv  zika.phylip.zst
data_analysis/: H3N2_HA_allyears_AA.fasta  H3N2_NA_allyears_AA.fasta  HA_allyears_NA.nwk  NA_allyears_NA.nwk  ebola.fasta  ebola.nwk  ebola.py  flu_200.py
dev/: bench-graph-pass-cli  bench-graph-pass-report  dev  extract-release-notes  is-arch  is-ci  is-static-binary  prettytest  prettytestlist  profile  publish-docker  publish-github  publish-nightly  release  run-smoke-tests  test-linux-distros  test-linux-distros-gnu  test-linux-distros-musl  trigger-nightly
dev/cross/: all  build  check  dump-symbols  run  strip
dev/docker/: checksum  cross-darwin.dockerfile  cross-linux.dockerfile  jupyter  jupyter.dockerfile  native.dockerfile  prod-debian.dockerfile  python  run
dev/lib/: utils.sh
doc/source/: clock_tree.rst  conf.py  gtr.rst  index.rst  treeanc.rst  treetime.rst  vcf_utils.rst
docker/: cross  dev  docker-dev.dockerfile  prettytest
docker/files/: start-jupyter
docs/: Makefile  _index.md  cli_overview.md  environment.yml  generate-reference-docs  requirements.txt
docs/algo-inventory/: ancestral.md  clock.md  distribution.md  graph.md  gtr.md  index.md  optimization.md  timetree.md  unimplemented.md
docs/algorithms/: optimize.md  sequence_evolution.md  sparse_probabilistic_sequence_model.md  timetree-optional-bits.md
docs/dev/: developer.guide.md  developer_guide.md
docs/docs/: reference.md
docs/port-algo-inventory/: _index.md  ancestral.md  clock.md  (+8 more)
examples/: .flu_example.py.swp  ancestral_inference.py  ancestral_reconstruction.py  basic_clock_tree.py  basic_clock_tree_diagnostics.py  clock_tree_example.py  ebola.py  ex_tree_anc.py  flu_200.py  flu_example.py  pipeline_example.py  polytomies.py  read_tree.py  relaxed_clock.py  rerooting_and_timetrees.py  rerooting_with_multiplicity.py  slope_diff.py  time_tree.py  tree_anc.py  tree_time_usage.py  treetime_example.py
kb/: README.md
scripts/: bench_scaling.sh  docker_build_checksum.sh  extract-release-notes  gtr_shared.py  is_ci.sh
test/: __init__.py  coalescent_test.py  coalescent_test_helper_functions.py  coalescent_tests.py  command_line_tests.sh  fft_accuracy.ipynb  fft_test.ipynb  fft_test.py  fft_test_jupyter.ipynb  fft_tests.py  fft_timer.py  run_tests.py  test_anc.py  test_arg.py  test_calc_nbranch_dist.py  test_calc_nbranches.py  test_gtr.py  test_outgroup_removal.py  test_seq2prof.py  test_sequence_data_validation.py  test_sequence_evolution_model.txt  test_time_tree.py  test_tree_loading.py  test_treetime.py  test_vcf.py  tree_time_test.py
test_scripts/: ancestral.py  ancestral_dense.py  ancestral_inference.py  ancestral_sparse.py  bench_timetree.sh  clock.py  conv_exp_py.ipynb  conv_gauss_exp.ipynb  conv_gauss_py.ipynb  dump_gtr_inference_dense.py  eig_single_site.ipynb  explore_graph.py  fitch.py  graph_example.py  gtr_tests.py  infer_gtr.py  payload.py  profile_map.py  test_coalescent_contributions.py  usher_example.py
tests/: ancestral_marginal_inference.py  branch_length_optimization.py  convolution.ipynb  run-smoke-tests  sequence_representation.py
time_tree/: time_tree.py  tree_anc.py
tree_time/: config.py  gtr.py  io.py  merger_models.py  seq_utils.py  tmp.py  tree_anc.py  tree_time.py  utils.py
treetime/: CLI_io.py  __init__.py  __main__.py  aa_models.py  arg.py  argument_parser.py  asrv.py  branch_len_interpolator.py  clock_filter_methods.py  clock_tree.py  config.py  distribution.py  gtr.py  gtr_site_specific.py  io.py  merger_models.py  node_interpolator.py  nuc_models.py  seq_utils.py  seqgen.py  sequence_data.py  test_opt.py  treeanc.py  treeregression.py  treetime.py  treetime.py.orig  utils.py  vcf_utils.py  version.py  wrappers.py
treetime_fft/: __init__.py  aa_models.py  branch_len_interpolator.py  clock_tree.py  config.py  gtr.py  merger_models.py  node_interpolator.py  seq_utils.py  treeanc.py  treeregression.py  treetime.py  utils.py
(+1224 files in other folders)
