[workspace]
resolver = '2'

members = [
  "packages/phyloxml",
  "packages/treetime",
  "packages/treetime-cli",
  "packages/usher-mat-utils",
]

exclude = []


[workspace.package]
description = "Maximum-likelihood phylodynamic inference"
version = "1.0.0"
documentation = "https://treetime.readthedocs.io/en/stable/"
repository = "https://github.com/neherlab/treetime"
homepage = "https://github.com/neherlab/treetime"
edition = "2021"
license = "MIT"
publish = false
keywords = ["biology", "evolution", "phylogenetics", "phylogeography", "virus"]
authors = [
  "NeherLab <https://neherlab.org>",
  "Richard Neher",
  "Pavel Sagulenko",
  "Emma Hodcroft",
  "Ivan Aksamentov",
]

[workspace.dependencies]
approx = "=0.5.1"
argmin = { version = "=0.6.0", features = [] }
assert2 = "=0.3.11"
atty = "=0.2.14"
auto_ops = "=0.3.0"
bio = { version = "=1.5.0", features = ["phylogeny"] }
bio-types = { version = "=1.0.1", features = ["phylogeny"] }
blas-src = { version = "=0.10.0", features = ["openblas-src"] }
bytes = { version = "1.6.1", features = ["serde"] }
bzip2 = "=0.4.3"
chrono = { version = "=0.4.21", default-features = false, features = ["clock", "alloc", "std", "serde", "time"] }
chronoutil = "=0.2.3"
clap = { version = "=3.2.16", features = ["derive"] }
clap-verbosity-flag = "=1.0.1"
clap_complete = "=3.2.3"
clap_complete_fig = "=3.2.4"
color-eyre = "=0.6.2"
comfy-table = "=7.1.1"
criterion = { version = "=0.5.1", features = ["html_reports"] }
crossbeam-queue = "=0.3.11"
crossbeam-skiplist = "=0.1.3"
crossterm = "=0.27.0"
csv = "=1.1.6"
ctor = "=0.1.23"
derive_more = "=0.99.17"
env_logger = "=0.9.0"
eyre = "=0.6.8"
flate2 = "=1.0.28"
gcollections = "=1.5.0"
getset = "=0.1.2"
image = { version = "=0.24.9", features = ["png"] }
indexmap = { version = "=1.9.1", features = ["serde-1"] }
indoc = "=2.0.5"
intervallum = "=1.4.1"
itertools = "=0.10.3"
lazy_static = "=1.4.0"
log = "=0.4.22"
maplit = { version = "=1.0.2", features = [] }
multimap = { version = "=0.8.3", features = ["serde_impl"] }
ndarray = { version = "=0.15.6", features = ["rayon", "serde", "approx-0_5", "blas"] }
ndarray-linalg = { version = "=0.14.1", features = ["openblas-static"] }
ndarray-rand = "=0.14.0"
ndarray-stats = "=0.5.0"
num = "=0.4.0"
num-integer = "=0.1.45"
num-traits = "=0.2.15"
num_cpus = "=1.13.1"
openblas-src = { version = "=0.10.9", features = ["static"] }
ordered-float = { version = "=3.1.0", default-features = false }
parking_lot = { version = "=0.12.1", features = ["arc_lock", "serde", "deadlock_detection", "hardware-lock-elision"] }
petgraph = { version = "=0.6.4", features = ["serde"] }
plotters = { version = "=0.3.5", default-features = false, features = ["all_series", "all_elements", "svg_backend"] }
pretty_assertions = "=1.4.0"
pretty_dtoa = "=0.3.0"
prost = { version = "=0.13.1", features = ["no-recursion-limit"] }
prost-build = "=0.13.1"
prost-derive = "=0.13.1"
prost-types = "=0.13.1"
rand = { version = "=0.8.5", features = ["serde1", "log"] }
rand_distr = { version = "=0.4.3", feaures = ["serde1", "std_math"] }
rand_isaac = { version = "=0.3.0", features = ["serde1"] }
rayon = "=1.5.3"
regex = { version = "=1.10.3", features = [] }
rgb = "=0.8.34"
rstat = { version = "=0.6.0", features = ["serde"] }
rstest = "=0.17.0"
rstest_reuse = "=0.5.0"
serde = { version = "=1.0.204", features = ["derive"] }
serde_json = { version = "=1.0.120", features = ["preserve_order", "indexmap", "unbounded_depth"] }
serde_repr = "=0.1.19"
serde_stacker = { version = "=0.1.11" }
serde_yaml = "=0.9.22"
smart-default = "=0.6.0"
statrs = "=0.16.0"
strum = "=0.24.1"
strum_macros = "=0.24.3"
textplots = "=0.8.6"
time = { version = "=0.3.13", features = ["serde", "macros", "parsing"] }
traversal = "=0.1.2"
typify = { version = "=0.1.0", features = ["macro"] }
xz2 = "=0.1.7"
zstd = { version = "=0.11.2", features = ["zstdmt"] }


[workspace.lints.rust]
# Lint groups
# https://doc.rust-lang.org/rustc/lints/groups.html
warnings = { level = "warn", priority = -100 }
future_incompatible = { level = "warn", priority = -90 }
deprecated_in_future = { level = "warn", priority = -80 }

rust_2018_compatibility = { level = "warn", priority = -70 }
rust_2018_idioms = { level = "warn", priority = -70 }
rust_2021_compatibility = { level = "warn", priority = -70 }
rust_2024_compatibility = { level = "warn", priority = -70 }

let_underscore = { level = "warn", priority = -50 }
nonstandard_style = { level = "warn", priority = -50 }
refining_impl_trait = { level = "warn", priority = -50 }
unused = { level = "warn", priority = -50 }

# Disable some of the lints enabled by default
# https://doc.rust-lang.org/rustc/lints/listing/warn-by-default.html
elided_lifetimes_in_paths = "allow"
non_snake_case = "allow"
unused_variables = "allow"

# Enable lints not enabled by default
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
absolute_paths_not_starting_with_crate = "warn"
deprecated_safe = "warn"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "warn"
keyword_idents_2018 = "warn"
keyword_idents_2024 = "warn"
let_underscore_drop = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_unsafe_on_extern = "warn"
non_ascii_idents = "warn"
non_local_definitions = "warn"
redundant_lifetimes = "warn"
rust_2021_incompatible_closure_captures = "warn"
rust_2021_incompatible_or_patterns = "warn"
rust_2021_prefixes_incompatible_syntax = "warn"
rust_2021_prelude_collisions = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
unstable_features = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
# unused_crate_dependencies = "warn"
# unreachable_pub = "warn"
# missing_copy_implementations = "warn"
# missing_debug_implementations = "warn"

[workspace.lints.clippy]
# https://rust-lang.github.io/rust-clippy/stable/
# This is a strict (sometimes too much) Clippy setup.
# We go bold and enable all Clippy lints, then disable the ones that we don't need.
# This has an advantage that when upgrading Rust and Clippy, we receive new lints automatically.
all = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -1 }
blanket_clippy_restriction_lints = "allow"
restriction = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Disable some of the Clippy lints
absolute_paths = "allow"
allow_attributes = "allow"
arithmetic_side_effects = "allow"
as_conversions = "allow"
assign_op_pattern = "allow"
assigning_clones = "allow"
bool_to_int_with_if = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cognitive_complexity = "allow"
comparison_chain = "allow"
default_numeric_fallback = "allow"
deref_by_slicing = "allow"
doc_markdown = "allow"
else_if_without_else = "allow"
equatable_if_let = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
expect_used = "allow"
float_arithmetic = "allow"
if_not_else = "allow"
impl_trait_in_params = "allow"
implicit_hasher = "allow"
implicit_return = "allow"
inconsistent_digit_grouping = "allow"
indexing_slicing = "allow"
integer_division = "allow"
iter_nth_zero = "allow"
large_digit_groups = "allow"
len_zero = "allow"
let_underscore_must_use = "allow"
manual_string_new = "allow"
match_same_arms = "allow"
min_ident_chars = "allow"
missing_assert_message = "allow"
missing_const_for_fn = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_inline_in_public_items = "allow"
missing_panics_doc = "allow"
missing_trait_methods = "allow"
mod_module_files = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
modulo_arithmetic = "allow"
must_use_candidate = "allow"
needless_for_each = "allow"
needless_raw_string_hashes = "allow"
needless_raw_strings = "allow"
new_without_default = "allow"
non_ascii_literal = "allow"
option_if_let_else = "allow"
panic = "allow"
panic_in_result_fn = "allow"
pattern_type_mismatch = "allow"
print_stderr = "allow"
print_stdout = "allow"
pub_use = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
renamed_function_params = "allow"
self_named_module_files = "allow"
semicolon_inside_block = "allow"
semicolon_outside_block = "allow"
separated_literal_suffix = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
should_implement_trait = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
similar_names = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
suboptimal_flops = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
type_repetition_in_bounds = "allow"
unimplemented = "allow"
unnecessary_wraps = "allow"
unreachable = "allow"
unreadable_literal = "allow"
unsafe_derive_deserialize = "allow"
unused_self = "allow"
unused_unit = "allow"
unwrap_in_result = "allow"
unwrap_used = "allow"
use_debug = "allow"
use_self = "allow"
useless_transmute = "allow"
wildcard_enum_match_arm = "allow"

iter_over_hash_type = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
bare_urls = "warn"
